gccida/g3/fixup_var_refs_1
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2396:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode promoted_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2417:6: error: use of undeclared identifier 'v26'
rtx *v26; // r10 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2421:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2421:5: error: use of undeclared identifier 'v30'; did you mean 'v20'?
rtx v30; // rax 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2411:18: note: 'v20' declared here
 struct rtx_def *v20; // r8 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2422:4: error: expected ';' after expression
rtx v31; // r10 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2422:5: error: use of undeclared identifier 'v31'; did you mean 'v21'?
rtx v31; // r10 
    ^~~
    v21
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2412:5: note: 'v21' declared here
int v21; // eax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2423:4: error: expected ';' after expression
rtx v32; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2423:5: error: use of undeclared identifier 'v32'
rtx v32; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2429:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2429:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2432:4: error: expected ';' after expression
rtx v41; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2432:5: error: use of undeclared identifier 'v41'
rtx v41; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2441:4: error: expected ';' after expression
rtx v50; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2441:5: error: use of undeclared identifier 'v50'
rtx v50; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2444:4: error: expected ';' after expression
rtx v53; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2444:5: error: use of undeclared identifier 'v53'
rtx v53; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2446:4: error: expected ';' after expression
rtx v55; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/function.c:2446:5: error: use of undeclared identifier 'v55'
rtx v55; // rdx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/fixup_var_refs_1/src/obj/function.o] Error 1
